# graph-simulator

./: README.md  pyproject.toml
graph_simulator/: graph.py  main.py
graph_simulator/algorithms/: bfs.py  bfs_matrix.py  dfs.py  dfs_matrix.py
graph_simulator/visualizer/: canvas.py
